test/files/run/splain-truncrefined.check
newSource1.scala:7: error: type mismatch;
  D|C {...}
  f(new D { type X = C; type Y = D })
    ^
